Added links to ToS and EULA in footer

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -9,6 +9,8 @@
             </div>
             <p>SYSTEM STATUS: <span class="text-terminal-green">ONLINE</span></p>
             <p>VERSION 0.0.1</p>
+            <a href="/agreements/tos" class="hover:underline text-terminal-green" target="_blank">Terms of Service</a>
+            <a href="/agreements/eula" class="hover:underline text-terminal-green" target="_blank">EULA</a>
         </div>
     </div>
 </footer>
