--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,7 +12,7 @@
 <body class="bg-terminal-blue-gray text-terminal-light-gray font-retro">
     <header class="bg-terminal-accent p-4 fixed top-0 left-0 w-full z-10">
         <nav class="flex justify-between items-center">
-            <h1 class="text-terminal-green">SOCIAL CIRCLE</h1>
+            <h1 class="text-terminal-green">SOCIAL CIRCLES</h1>
             <ul class="flex space-x-4 list-none m-0 p-0">
                 <li><a href="/" class="text-terminal-light-gray no-underline hover:underline">HOME</a></li>
                 <% if (locals.isLoggedIn) { %>
